@@ -1,3 +1,8 @@
+2006-04-17  Andrew John Hughes  <gnu_andrew@member.fsf.org>
+
+	* java/lang/annotation/Annotation.java:
+	Documented.
+	
 2006-04-14  Tom Tromey  <tromey@redhat.com>
 
 	* javax/swing/tree/DefaultTreeSelectionModel.java (getListeners):
